# apimoex

./: .gitignore  README.rst  Taskfile.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
apimoex/: __init__.py  client.py  requests.py
docs/: Makefile  api.rst  change_log.rst  conf.py
tests/: test_client.py  test_requests.py
